@@ -122,7 +122,12 @@ function(x,
   
   output <- as.data.frame(cbind(Dataset[, variables], f), stringsAsFactors = FALSE)
 
-  colnames(output) <- c(paste("x", if (d > 1) variables else "", sep = ""), "f")    
+  if (is.null(colnames(Dataset))) {
+    colnames(output) <- c(paste("x", if (d > 1) variables else "", sep = ""), "f")
+  }
+  else {
+    colnames(output) <- c(colnames(Dataset)[variables], "f")   
+  }
   
   options(digits = digits)
 
@@ -222,8 +227,13 @@ function(x,
   }
   
   output <- as.data.frame(cbind(Dataset[, variables], f), stringsAsFactors = FALSE)
-
-  colnames(output) <- c(paste("x", if (d > 1) variables else "", sep = ""), "f")    
+  
+  if (is.null(colnames(Dataset))) {
+    colnames(output) <- c(paste("x", if (d > 1) variables else "", sep = ""), "f")
+  }
+  else {
+    colnames(output) <- c(colnames(Dataset)[variables], "f")   
+  }
   
   options(digits = digits)
 
