@@ -2,7 +2,17 @@
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 \section{Changes in version 2.10.3}{ 
 \itemize{
-\item Rough parameter estimation for binomial parametric family is improved.
+\item Method \code{Zp} is replaced by \code{a.Zp} accessor method.
+\item Method \code{coef} is replaced by \code{a.theta1.all} and \code{a.theta2.all} accessor methods.
+\item Accessor methods are added for all slots.
+\item Class \code{"RNGMIX.Theta"} is added.
+\item Method \code{show} is added for \code{"RCLS.chunk"} class.
+\item Minimum number of component \code{cmin} is added to \code{REBMIX} arguments.
+\item Minimum number of component \code{cmin} slot is added to \code{"REBMIX"} class.
+\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
+\item Preprocessing \code{"Parzen window"} is renamed to \code{"kernel density estimation"}.
+\item Rough parameter estimation for binomial and Poisson parametric families is improved.
+\item Latent class analysis is added.
 }
 }
 \section{Changes in version 2.10.2}{ 
